@@ -6,7 +6,7 @@
  * Edit config.h.in instead.
  */
 /***
- *** config.h.in, generated by mkconfig:
+ *** config.h.in, generated by mkconfig.pl:
  ***
  ***   (config.h.in.in
  ***    + ../config.h.in)
@@ -149,7 +149,7 @@
 #undef HAVE_CFPREFERENCESCOPYAPPVALUE
 
 /* Define to 1 if you have the `chsize' function. */
-#undef HAVE_CHSIZE
+#define HAVE_CHSIZE 1
 
 /* Define to 1 if you have the `clock_gettime' function. */
 #undef HAVE_CLOCK_GETTIME
@@ -217,7 +217,7 @@
 
 /* Define to 1 if you have the declaration of `getcwd', and to 0 if you don't.
    */
-#undef HAVE_DECL_GETCWD
+#define HAVE_DECL_GETCWD 1
 
 /* Define to 1 if you have the declaration of `getc_unlocked', and to 0 if you
    don't. */
@@ -249,7 +249,7 @@
 
 /* Define to 1 if you have the declaration of `__fpending', and to 0 if you
    don't. */
-#undef HAVE_DECL___FPENDING
+#define HAVE_DECL___FPENDING 0
 
 /* Define to 1 if you have the <direct.h> header file. */
 #define HAVE_DIRECT_H 1
@@ -359,7 +359,7 @@
 #undef HAVE_ISASCII
 
 /* Define to 1 if you have the `iswprint' function. */
-#undef HAVE_ISWPRINT
+#define HAVE_ISWPRINT 1
 
 /* Define if you have MIT Kerberos version 4 available. */
 #undef HAVE_KERBEROS
@@ -413,7 +413,7 @@
 #undef HAVE_MBRLEN
 
 /* Define to 1 if mbrtowc and mbstate_t are properly declared. */
-#undef HAVE_MBRTOWC
+#define HAVE_MBRTOWC 1
 
 /* Define to 1 if you have the `mbsinit' function. */
 #undef HAVE_MBSINIT
@@ -587,7 +587,7 @@
 #undef HAVE_STRSTR
 
 /* Define to 1 if you have the `strtol' function. */
-#undef HAVE_STRTOL
+#define HAVE_STRTOL 1
 
 /* Define to 1 if you have the `strtoul' function. */
 #undef HAVE_STRTOUL
@@ -712,10 +712,10 @@
 #undef HAVE_WAITPID
 
 /* Define to 1 if you have the <wchar.h> header file. */
-#undef HAVE_WCHAR_H
+#define HAVE_WCHAR_H 1
 
 /* Define if you have the 'wchar_t' type. */
-#undef HAVE_WCHAR_T
+#define HAVE_WCHAR_T 1
 
 /* Define to 1 if you have the `wcslen' function. */
 #undef HAVE_WCSLEN
@@ -783,16 +783,6 @@
 /* Define to a substitute value for mmap()'s MAP_ANONYMOUS flag. */
 #undef MAP_ANONYMOUS
 
-/* Define MAP_FILE when it isn't otherwise.  */
-#ifndef MAP_FILE
-# define MAP_FILE 0
-#endif
-
-/* Define MAP_FAILED for old systems which neglect to.  */
-#ifndef MAP_FAILED
-# define MAP_FAILED ((void *)-1)
-#endif
-
 /* By default, CVS stores its modules and other such items in flat text files
    (MY_NDBM enables this). Turning off MY_NDBM causes CVS to look for a
    system-supplied ndbm database library and use it instead. That may speed
@@ -824,7 +814,7 @@
 #undef PAM_SERVICE_NAME
 
 /* the number of pending output bytes on stream `fp' */
-#undef PENDING_OUTPUT_N_BYTES
+#define PENDING_OUTPUT_N_BYTES ( fp ? fp->_ptr - fp->_base : 0 )
 
 /* Define if you want CVS to be able to serve as a transparent proxy for write
    operations. Disabling this may produce a slight performance gain on some
